--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,7 +105,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.sapphirecoders.sscwsvit"
+        applicationId "com.sappirecoders.sscwsvit"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -142,7 +142,6 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
