--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "eslint": "^5.16.0",
     "react": "16.8.3",
     "react-native": "0.59.3",
-    "react-native-fading-slides": "^0.3.1",
-    "react-native-firebase": "^5.3.1",
-    "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.8.1"
+    "react-native-firebase": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
