--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,6 +25,8 @@ target 'SSCWsvit' do
   pod 'Fabric', '~> 1.9.0'
   pod 'Crashlytics', '~> 3.12.0'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
 end
 
 target 'SSCWsvit-tvOS' do
