--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-paper": "^2.15.2",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1"
   },
