--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "eslint": "^5.16.0",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-easy-grid": "^0.2.1",
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.3.1",
+    "react-native-foldview": "^1.2.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-paper": "^2.15.2",
+    "react-native-super-grid": "^3.0.4",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
