--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^5.16.0",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-calendars": "^1.66.0",
     "react-native-easy-grid": "^0.2.1",
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.3.1",
