--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-foldview": "^1.2.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-paper": "^2.15.2",
+    "react-native-really-awesome-button": "^1.4.2",
     "react-native-super-grid": "^3.0.4",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
