--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^5.16.0",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-autogrow-textinput": "^5.2.0",
     "react-native-calendars": "^1.66.0",
     "react-native-easy-grid": "^0.2.1",
     "react-native-elements": "^1.1.0",
@@ -23,6 +24,7 @@
     "react-native-paper": "^2.15.2",
     "react-native-really-awesome-button": "^1.4.2",
     "react-native-super-grid": "^3.0.4",
+    "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
