--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-really-awesome-button": "^1.4.2",
     "react-native-super-grid": "^3.0.4",
     "react-native-textinput-effects": "^0.5.1",
+    "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.8.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
