--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "eslint": "^5.16.0",
     "react": "16.8.3",
-    "react-native": "0.59.3",
+    "react-native": "0.59.5",
     "react-native-autogrow-textinput": "^5.2.0",
     "react-native-calendars": "^1.66.0",
     "react-native-easy-grid": "^0.2.1",
@@ -21,8 +21,10 @@
     "react-native-firebase": "^5.3.1",
     "react-native-foldview": "^1.2.1",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-paper": "^2.15.2",
     "react-native-really-awesome-button": "^1.4.2",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-super-grid": "^3.0.4",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-timeline-listview": "^0.2.3",
