--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,9 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-autogrow-textinput')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
