--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-paper": "^2.15.2",
     "react-native-really-awesome-button": "^1.4.2",
     "react-native-snap-carousel": "^3.7.5",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-super-grid": "^3.0.4",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-timeline-listview": "^0.2.3",
