--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-splash-screen')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-firebase')
     implementation project(':react-native-autogrow-textinput')
